feat: add jwt authentication to follower service
