# follower-service/docs/swagger.json
@@ -1,11 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API for following users and recommending profiles using Neo4j graph database.",
+        "title": "Follower Service API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8082",
+    "basePath": "/",
     "paths": {
         "/api/followers/can-comment": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "User can comment only if they follow the blog author",
                 "produces": [
                     "application/json"
@@ -13,15 +23,8 @@
                 "tags": [
                     "followers"
                 ],
-                "summary": "Check if user can comment on author's blog",
+                "summary": "Check if authenticated user can comment on author's blog",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Follower user ID",
-                        "name": "followerId",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "Blog author user ID",
@@ -49,6 +52,15 @@
                             }
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -63,7 +75,12 @@
         },
         "/api/followers/follow": {
             "post": {
-                "description": "Creates FOLLOWS relationship between two users",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Creates FOLLOWS relationship between authenticated user and selected user",
                 "consumes": [
                     "application/json"
                 ],
@@ -104,6 +121,65 @@
                             }
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/followers/recommendations": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns users followed by the people that authenticated user already follows",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "followers"
+                ],
+                "summary": "Get profile recommendations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "type": "integer",
+                                    "format": "int64"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -118,7 +194,12 @@
         },
         "/api/followers/unfollow": {
             "delete": {
-                "description": "Deletes FOLLOWS relationship between two users",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Deletes FOLLOWS relationship between authenticated user and selected user",
                 "consumes": [
                     "application/json"
                 ],
@@ -159,53 +240,8 @@
                             }
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/followers/{userId}/recommendations": {
-            "get": {
-                "description": "Returns users followed by the people that selected user already follows",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "followers"
-                ],
-                "summary": "Get profile recommendations",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -230,13 +266,17 @@
         "model.FollowRequest": {
             "type": "object",
             "properties": {
-                "followerId": {
-                    "type": "integer"
-                },
                 "followingId": {
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
