# follower-service/internal/model/follow.go
@@ -1,6 +1,5 @@
 package model
 
 type FollowRequest struct {
-	FollowerId int64 `json:"followerId"`
 	FollowingId int64 `json:"followingId"`
 }
